--- a/pages/MAIN_001_PC_로그인 전.html
+++ b/pages/MAIN_001_PC_로그인 전.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link
+      rel="stylesheet"
+      href="../assets/css/swiper-bundle.min.css"
+      type="text/css"
+    />
     <link rel="stylesheet" href="../assets/css/common.css" type="text/css" />
 
     <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/js/common.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/bootstrap-5.0.2/dist/js/bootstrap.min.js"></script>
     <script src="../assets/js/include.js"></script>
+    <script src="../assets/js/swiper-bundle.min.js"></script>
   </head>
   <body>
     <div class="one">
@@ -52,7 +58,172 @@
                   </a>
                 </div>
               </div>
-              <div class="one-main-recommend"></div>
+              <div class="one-main-recommend">
+                <div class="one-main-recommend__title">
+                  <strong>
+                    법무법인 태평양<br />
+                    추천 교육과정 입니다.
+                  </strong>
+                  <p>
+                    법무법인 태평양에서 추천하는<br />
+                    교육과정 입니다.<br />
+                    회원가입 후에 더 많은 정보를 얻으실 수<br />
+                    있습니다.
+                  </p>
+                  <div class="one-main-recommend__nav">
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                  </div>
+                </div>
+                <div class="one-main-recommend-list">
+                  <div class="swiper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <a href="" class="one-curriculum-list-item">
+                          <div class="one-curriculum-list-item__thumb">
+                            <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                            <img src="/assets/images/thumb01.svg" alt="" />
+                          </div>
+                          <div class="one-curriculum-list-item__title">
+                            과정명이 노출. 과정명 노출과정명이 노출.과정명 노출
+                            과정명이 노출. 과정명이 노출과과정명이 노출. 과정명
+                            노출과정명이 노출.과정명 노출 과정명이 노출.
+                            과정명이 노출과
+                          </div>
+                          <div class="one-curriculum-list-item__foot">
+                            <div class="one-curriculum-list-item__info">
+                              <p>수강생: <strong>50</strong></p>
+                              <p>
+                                <i class="ico-like"></i>
+                                <strong>250</strong>
+                              </p>
+                            </div>
+                            <div class="one-curriculum-list-item__review">
+                              <p>
+                                후기:
+                                <strong>6</strong>
+                              </p>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                      <div class="swiper-slide">
+                        <a href="" class="one-curriculum-list-item">
+                          <div class="one-curriculum-list-item__thumb">
+                            <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                            <img src="/assets/images/thumb01.svg" alt="" />
+                          </div>
+                          <div class="one-curriculum-list-item__title">
+                            과정명이 노출. 과정명 노출과정명이 노출.과정명 노출
+                            과정명이 노출. 과정명이 노출과과정명이 노출. 과정명
+                            노출과정명이 노출.과정명 노출 과정명이 노출.
+                            과정명이 노출과
+                          </div>
+                          <div class="one-curriculum-list-item__foot">
+                            <div class="one-curriculum-list-item__info">
+                              <p>수강생: <strong>50</strong></p>
+                              <p>
+                                <i class="ico-like"></i>
+                                <strong>250</strong>
+                              </p>
+                            </div>
+                            <div class="one-curriculum-list-item__review">
+                              <p>
+                                후기:
+                                <strong>6</strong>
+                              </p>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                      <div class="swiper-slide">
+                        <a
+                          href=""
+                          class="one-curriculum-list-item one-curriculum-list-item--completed"
+                        >
+                          <div class="one-curriculum-list-item__thumb">
+                            <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                            <img src="/assets/images/thumb01.svg" alt="" />
+                            <div class="one-curriculum-list-item__completed">
+                              <p>COMPLETED</p>
+                            </div>
+                          </div>
+                          <div class="one-curriculum-list-item__title">
+                            과정명이 노출. 과정명 노출과정명이 노출.과정명 노출
+                            과정명이 노출. 과정명이 노출과과정명이 노출. 과정명
+                            노출과정명이 노출.과정명 노출 과정명이 노출.
+                            과정명이 노출과
+                          </div>
+                          <div class="one-curriculum-list-item__foot">
+                            <div class="one-curriculum-list-item__info">
+                              <p>수강생: <strong>50</strong></p>
+                              <p>
+                                <i class="ico-like"></i>
+                                <strong>250</strong>
+                              </p>
+                            </div>
+                            <div class="one-curriculum-list-item__review">
+                              <p>
+                                후기:
+                                <strong>6</strong>
+                              </p>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                      <div class="swiper-slide">
+                        <a href="" class="one-curriculum-list-item">
+                          <div class="one-curriculum-list-item__thumb">
+                            <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                            <img src="/assets/images/thumb01.svg" alt="" />
+                          </div>
+                          <div class="one-curriculum-list-item__title">
+                            과정명이 노출. 과정명 노출과정명이 노출.과정명 노출
+                            과정명이 노출. 과정명이 노출과과정명이 노출. 과정명
+                            노출과정명이 노출.과정명 노출 과정명이 노출.
+                            과정명이 노출과
+                          </div>
+                          <div class="one-curriculum-list-item__foot">
+                            <div class="one-curriculum-list-item__info">
+                              <p>수강생: <strong>50</strong></p>
+                              <p>
+                                <i class="ico-like"></i>
+                                <strong>250</strong>
+                              </p>
+                            </div>
+                            <div class="one-curriculum-list-item__review">
+                              <p>
+                                후기:
+                                <strong>6</strong>
+                              </p>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                  </div>
+                  <script>
+                    $(document).ready(function () {
+                      var swiper = new Swiper('.one-main-recommend .swiper', {
+                        slidesPerView: 2,
+                        loop: true,
+                        spaceBetween: 40,
+                        navigation: {
+                          nextEl: '.one-main-recommend .swiper-button-next',
+                          prevEl: '.one-main-recommend .swiper-button-prev',
+                        },
+                        breakpoints: {
+                          1024: {
+                            slidesPerView: 3,
+                            spaceBetween: 30,
+                          },
+                        },
+                      });
+                    });
+                  </script>
+                </div>
+              </div>
             </div>
           </div>
 
@@ -161,6 +332,76 @@
       <!-- footer -->
       <div include-html="../layout/footer.html"></div>
       <!-- //footer -->
+    </div>
+
+    <div
+      style="
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        padding: 10px;
+        background: rgba(0, 0, 0, 0.5);
+      "
+    >
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#exampleModal"
+      >
+        modal01
+      </button>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">개인정보처리방침</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-4" style="font-size: 24px">
+              <strong>
+                CODEF API 도입으로<br />
+                다양한 경영정보 제공이 가능해졌어요.
+              </strong>
+            </div>
+            <div>
+              진형세무회계의 경정청구 자동화 서비스 ‘택스리서치’의 주요 기능인
+              ‘국세 및 지방세 납부내역을 조회’하는데 API 사용이 필수적이라는
+              것을 알게 되었습니다. 헥토데이터를 통해 필요한 API 대부분을 적용할
+              수 있었고, 고객사의 니즈에 적절히 대응해 준다는 추천 후기에
+              헥토데이터의 CODEF API를 이용하게 되었습니다.<br /><br />
+              지난 5년간 과다 납부한 국세와 지방세를 자동으로 산출하기 위해서는
+              10개가 넘는 세금 관련 API 연결이 필요했습니다. 헥토데이터는 API
+              상품이 상세하고 다양하게 준비되어 있어서 필요한 기능을 손쉽게
+              구현할 수 있었습니다.<br /><br />
+               기존에는 환급금을 확인하려면 복잡한 서식과 여러 가지 신고 서류를
+              세무회계 전문가에게 전달해야 했지만, 이제는 택스리서치에서 환급금
+              확인부터 경정청구 위임 의뢰까지 한 번에 할 수 있습니다. 인증을
+              거치면 헥토데이터 API를 통해 고객이 홈택스 또는 위택스에 신고한
+              국세, 지방세 관련 데이터를 안전하게 전송받을 수 있고, 전송받은
+              데이터는 진형세무회계에서 다년간 축적한 경정청구 노하우을 담은
+              연산식을 거쳐 예상 환급금으로 산출되어 고객 화면에 나타납니다.
+              금액이 연산되는 30초 남짓 동안 고객들은 자사와 비슷한 매출 규모를
+              가진 회사가 1년간 평균 얼마의 세금을 감면받았는지 함께 확인할 수
+              있습니다.
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
+              닫기
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
