--- a/pages/index.html
+++ b/pages/index.html
@@ -19,6 +19,18 @@
       <main id="content">
         <div class="one-contents">
           <div class="one-url">
+            <h2>00. 메인</h2>
+            <table>
+              <tbody>
+                <tr>
+                  <td>
+                    <a href="MAIN_001_PC_로그인 전.html"
+                      >MAIN_001_PC_로그인 전</a
+                    >
+                  </td>
+                </tr>
+              </tbody>
+            </table>
             <h2>01. 교육신청</h2>
             <table>
               <tbody>
