--- a/pages/EDU_002_3_교육신청_상세페이지_결제페이지.html
+++ b/pages/EDU_002_3_교육신청_상세페이지_결제페이지.html
@@ -193,5 +193,54 @@
       <div include-html="../layout/footer.html"></div>
       <!-- //footer -->
     </div>
+
+    <div
+      style="
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        padding: 10px;
+        background: rgba(0, 0, 0, 0.5);
+      "
+    >
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#exampleModal"
+      >
+        modal01
+      </button>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">강의 만족도</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="text-center" style="font-size: 20px">
+              <strong>학습 내용은 어떠셨나요?</strong>
+            </div>
+            <div class="d-flex justify-content-center mt-2">
+              <span class="one-score one-score-lg one-score-lg--04"></span>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
+              완료
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
