수정사항 반영

--- a/pages/EDU_001_교육과정 리스트.html
+++ b/pages/EDU_001_교육과정 리스트.html
@@ -77,7 +77,7 @@
                 <a href="">CEO 교육 </a>
               </div>
               <div class="one-curriculum-list">
-                <div class="one-curriculum-list-item">
+                <a href="" class="one-curriculum-list-item">
                   <div class="one-curriculum-list-item__thumb">
                     <p>법무법인 태평양 법률자료실 교육과정 1</p>
                   </div>
@@ -97,15 +97,15 @@
                     <div class="one-curriculum-list-item__review">
                       <p>
                         후기:
-                        <a href="">6</a>
+                        <strong>6</strong>
                       </p>
                     </div>
                   </div>
-                </div>
-                <div class="one-curriculum-list-item">
+                </a>
+                <a href="" class="one-curriculum-list-item">
                   <div class="one-curriculum-list-item__thumb">
                     <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                    <img src="/assets/images/thumb01.svg" alt="" />
+                    <img src="./../assets/images/thumb01.svg" alt="" />
                   </div>
                   <div class="one-curriculum-list-item__title">
                     과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
@@ -123,63 +123,12 @@
                     <div class="one-curriculum-list-item__review">
                       <p>
                         후기:
-                        <a href="">6</a>
+                        <strong>6</strong>
                       </p>
                     </div>
                   </div>
-                </div>
-                <div class="one-curriculum-list-item">
-                  <div class="one-curriculum-list-item__thumb">
-                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                  </div>
-                  <div class="one-curriculum-list-item__title">
-                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
-                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
-                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
-                  </div>
-                  <div class="one-curriculum-list-item__foot">
-                    <div class="one-curriculum-list-item__info">
-                      <p>수강생: <strong>50</strong></p>
-                      <p>
-                        <i class="ico-like"></i>
-                        <strong>250</strong>
-                      </p>
-                    </div>
-                    <div class="one-curriculum-list-item__review">
-                      <p>
-                        후기:
-                        <a href="">6</a>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="one-curriculum-list-item">
-                  <div class="one-curriculum-list-item__thumb">
-                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                    <img src="/assets/images/thumb01.svg" alt="" />
-                  </div>
-                  <div class="one-curriculum-list-item__title">
-                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
-                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
-                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
-                  </div>
-                  <div class="one-curriculum-list-item__foot">
-                    <div class="one-curriculum-list-item__info">
-                      <p>수강생: <strong>50</strong></p>
-                      <p>
-                        <i class="ico-like"></i>
-                        <strong>250</strong>
-                      </p>
-                    </div>
-                    <div class="one-curriculum-list-item__review">
-                      <p>
-                        후기:
-                        <a href="">6</a>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="one-curriculum-list-item">
+                </a>
+                <a href="" class="one-curriculum-list-item">
                   <div class="one-curriculum-list-item__thumb">
                     <p>법무법인 태평양 법률자료실 교육과정 1</p>
                   </div>
@@ -199,15 +148,15 @@
                     <div class="one-curriculum-list-item__review">
                       <p>
                         후기:
-                        <a href="">6</a>
+                        <strong>6</strong>
                       </p>
                     </div>
                   </div>
-                </div>
-                <div class="one-curriculum-list-item">
+                </a>
+                <a href="" class="one-curriculum-list-item">
                   <div class="one-curriculum-list-item__thumb">
                     <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                    <img src="/assets/images/thumb01.svg" alt="" />
+                    <img src="./../assets/images/thumb01.svg" alt="" />
                   </div>
                   <div class="one-curriculum-list-item__title">
                     과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
@@ -225,11 +174,113 @@
                     <div class="one-curriculum-list-item__review">
                       <p>
                         후기:
-                        <a href="">6</a>
+                        <strong>6</strong>
                       </p>
                     </div>
                   </div>
-                </div>
+                </a>
+                <a href="" class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like"></i>
+                        <strong>250</strong>
+                      </p>
+                    </div>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <strong>6</strong>
+                      </p>
+                    </div>
+                  </div>
+                </a>
+                <a href="" class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                    <img src="./../assets/images/thumb01.svg" alt="" />
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like"></i>
+                        <strong>250</strong>
+                      </p>
+                    </div>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <strong>6</strong>
+                      </p>
+                    </div>
+                  </div>
+                </a>
+                <a href="" class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like"></i>
+                        <strong>250</strong>
+                      </p>
+                    </div>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <strong>6</strong>
+                      </p>
+                    </div>
+                  </div>
+                </a>
+                <a href="" class="one-curriculum-list-item">
+                  <div class="one-curriculum-list-item__thumb">
+                    <p>법무법인 태평양 법률자료실 교육과정 1</p>
+                    <img src="./../assets/images/thumb01.svg" alt="" />
+                  </div>
+                  <div class="one-curriculum-list-item__title">
+                    과정명이 노출. 과정명 노출과정명이 노출.과정명 노출 과정명이
+                    노출. 과정명이 노출과과정명이 노출. 과정명 노출과정명이
+                    노출.과정명 노출 과정명이 노출. 과정명이 노출과
+                  </div>
+                  <div class="one-curriculum-list-item__foot">
+                    <div class="one-curriculum-list-item__info">
+                      <p>수강생: <strong>50</strong></p>
+                      <p>
+                        <i class="ico-like"></i>
+                        <strong>250</strong>
+                      </p>
+                    </div>
+                    <div class="one-curriculum-list-item__review">
+                      <p>
+                        후기:
+                        <strong>6</strong>
+                      </p>
+                    </div>
+                  </div>
+                </a>
               </div>
               <nav class="one-pagination">
                 <a href="" class="one-pagination-first">처음</a>
