--- a/pages/EDU_MYPAGE_004_나의학습방_관심과정2.html
+++ b/pages/EDU_MYPAGE_004_나의학습방_관심과정2.html
@@ -80,23 +80,70 @@
                           <tbody>
                             <tr>
                               <th>결 제 일</th>
-                              <td>: 2025.05.26</td>
+                              <td>2025.05.26</td>
                             </tr>
                             <tr>
                               <th>과 정 명</th>
-                              <td>: 임원 리더십 교육</td>
+                              <td>임원 리더십 교육</td>
                             </tr>
                             <tr>
                               <th>결제금액</th>
-                              <td>: 500,000원</td>
+                              <td>500,000원</td>
                             </tr>
                             <tr>
                               <th>결제수단</th>
-                              <td>: 카드</td>
+                              <td>카드</td>
                             </tr>
                             <tr>
                               <th>결제상태</th>
-                              <td>: 완료</td>
+                              <td>완료</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                    <div class="one-interestcourse-item-end">
+                      <button type="button" class="btn btn-sm btn-dark">
+                        영수증 출력
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <br /><br />
+                <div class="one-interestcourse-list">
+                  <div class="one-interestcourse-item">
+                    <div class="one-interestcourse-item-start">
+                      <div class="one-interestcourse-item__table">
+                        <table>
+                          <colgroup>
+                            <col style="width: 60px" />
+                            <col style="width: 400px" />
+                          </colgroup>
+                          <tbody>
+                            <tr>
+                              <th>결 제 일</th>
+                              <td>2025.05.26</td>
+                            </tr>
+                            <tr>
+                              <th>과 정 명</th>
+                              <td>임원 리더십 교육</td>
+                            </tr>
+                            <tr>
+                              <th>결제금액</th>
+                              <td>500,000원</td>
+                            </tr>
+                            <tr>
+                              <th>결제수단</th>
+                              <td>카드</td>
+                            </tr>
+                            <tr>
+                              <th>결제상태</th>
+                              <td>
+                                결제대기 <br/ > 계좌번호 : 56211991537475<br/ >
+                                은행명 : 신한(통합)은행<br/ > 입금기한 :
+                                2025.09.14 23:59:59<br/ > 예금주명 :
+                                (사)한국휴게음식업중앙회
+                              </td>
                             </tr>
                           </tbody>
                         </table>
