수정사항 반영

--- a/pages/CMM_4_2_비밀번호찾기_인증 메일 폼.html
+++ b/pages/CMM_4_2_비밀번호찾기_인증 메일 폼.html
@@ -57,7 +57,7 @@
         </tr>
         <tr>
           <td style="text-align: center">
-            <img src="/assets/images/logo-main.png" alt="" />
+            <img src="../assets/images/logo-main.png" alt="" />
           </td>
         </tr>
         <tr>
