--- a/pages/EDU_MYPAGE_001_1_나의학습방_학습현황[카드형].html
+++ b/pages/EDU_MYPAGE_001_1_나의학습방_학습현황[카드형].html
@@ -114,7 +114,7 @@
                   <div class="one-learningstatus-item">
                     <div class="one-learningstatus-item__thumb">
                       <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                      <img src="/assets/images/thumb01.svg" alt="" />
+                      <img src="../assets/images/thumb01.svg" alt="" />
                     </div>
                     <div class="one-learningstatus-item__table">
                       <table>
@@ -199,7 +199,7 @@
                   <div class="one-learningstatus-item">
                     <div class="one-learningstatus-item__thumb">
                       <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                      <img src="/assets/images/thumb01.svg" alt="" />
+                      <img src="../assets/images/thumb01.svg" alt="" />
                     </div>
                     <div class="one-learningstatus-item__table">
                       <table>
