--- a/pages/MAIN_001_PC_로그인 전.html
+++ b/pages/MAIN_001_PC_로그인 전.html
@@ -82,7 +82,7 @@
                         <a href="" class="one-curriculum-list-item">
                           <div class="one-curriculum-list-item__thumb">
                             <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                            <img src="/assets/images/thumb01.svg" alt="" />
+                            <img src="../assets/images/thumb01.svg" alt="" />
                           </div>
                           <div class="one-curriculum-list-item__title">
                             과정명이 노출. 과정명 노출과정명이 노출.과정명 노출
@@ -111,7 +111,7 @@
                         <a href="" class="one-curriculum-list-item">
                           <div class="one-curriculum-list-item__thumb">
                             <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                            <img src="/assets/images/thumb01.svg" alt="" />
+                            <img src="../assets/images/thumb01.svg" alt="" />
                           </div>
                           <div class="one-curriculum-list-item__title">
                             과정명이 노출. 과정명 노출과정명이 노출.과정명 노출
@@ -143,7 +143,7 @@
                         >
                           <div class="one-curriculum-list-item__thumb">
                             <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                            <img src="/assets/images/thumb01.svg" alt="" />
+                            <img src="../assets/images/thumb01.svg" alt="" />
                             <div class="one-curriculum-list-item__completed">
                               <p>COMPLETED</p>
                             </div>
@@ -175,7 +175,7 @@
                         <a href="" class="one-curriculum-list-item">
                           <div class="one-curriculum-list-item__thumb">
                             <p>법무법인 태평양 법률자료실 교육과정 1</p>
-                            <img src="/assets/images/thumb01.svg" alt="" />
+                            <img src="../assets/images/thumb01.svg" alt="" />
                           </div>
                           <div class="one-curriculum-list-item__title">
                             과정명이 노출. 과정명 노출과정명이 노출.과정명 노출
