--- a/pages/EDU_002_교육신청_상세페이지.html
+++ b/pages/EDU_002_교육신청_상세페이지.html
@@ -45,7 +45,7 @@
                       법무법인 태평양<br />
                       법률자료실 교육과정 1
                     </p>
-                    <img src="/assets/images/thumb01.svg" alt="" />
+                    <img src="../assets/images/thumb01.svg" alt="" />
                   </div>
                   <div class="one-detail-head__contents">
                     <div class="one-detail-head__table">
